--- a/Study/14.CNN-Coding_finished.ipynb
+++ b/Study/14.CNN-Coding_finished.ipynb
@@ -86,17 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 3, 1)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# (이미지 갯수, 3 x 3 (array) , 칼러) \n",
     "# 이미지 shape를 출력\n",
