--- a/02.Scikit-learn.ipynb
+++ b/02.Scikit-learn.ipynb
@@ -20,8 +20,12 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "## 1 Perceptron 알고리즘 분석\n",
     "by scikit-learn"
@@ -170,11 +174,11 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler, Normalizer\n",
-    "\n",
     "# Normalization (정규화)\n",
     "# 수식 : (요소값 - 최소값) / (최대값 - 최소값)\n",
-    "# 설명 : 0 ~ 100의 값으로 변환, 동질한 데이터 단위가 너무 크거나 작을 떄\n",
+    "# 설명 : 데이터를 0과 1 사이의 값으로, 단위가 다른 데이터간 비교\n",
+    "from sklearn.preprocessing import StandardScaler, Normalizer\n",
+    "\n",
     "sn = Normalizer()\n",
     "sn.fit(X_train)\n",
     "X_train_std = sn.transform(X_train)\n",
@@ -203,8 +207,9 @@
    ],
    "source": [
     "# Standard (평균화)\n",
-    "# 데이터를 0과 1 사이의 값으로 재정렬   cf) 수식 : (요소값 - 평균) / 표준편차\n",
-    "# 설명 : 단위가 다른 데이터간 비교, 평균에서의 거리로 비교를 용이하게 한다.\n",
+    "# 수식 : (요소값 - 평균) / 표준편차\n",
+    "# 설명 : 0 ~ 100의 값으로 변환, 동질 데이터 단위가 너무 크거나 작을 떄\n",
+    "\n",
     "sc = StandardScaler()\n",
     "sc.fit(X_train)\n",
     "X_train_std = sc.transform(X_train)\n",
