--- a/04.Dim Reduction.ipynb
+++ b/04.Dim Reduction.ipynb
@@ -7,7 +7,9 @@
     "# Chapter 5 - Compressing Data via Dimensionality Reduction\n",
     "차원축소를 이용한 데이터 압축\n",
     "\n",
-    "https://deeplearning4j.org/kr/eigenvector"
+    "https://deeplearning4j.org/kr/eigenvector\n",
+    "\n",
+    "(참고도서)http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788931580143&orderClick=LAG&Kc="
    ]
   },
   {
