--- a/03.Morphology.ipynb
+++ b/03.Morphology.ipynb
@@ -362,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#tokenize(\"itismyfavouritebook\")"
@@ -388,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 문맥 중심으로 중요단어를 선별\n",
@@ -413,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 문버 벡터에서 주어진 포지션에 대한 키워드를 생성\n",
@@ -520,11 +526,22 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('danish', 'dutch', 'english', 'finnish', 'french', 'german', 'hungarian', 'italian', 'norwegian', 'porter', 'portuguese', 'romanian', 'russian', 'spanish', 'swedish')\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk, sys\n",
     "from nltk import wordpunct_tokenize\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "from nltk.stem import SnowballStemmer\n",
+    "print(SnowballStemmer.languages)"
    ]
   },
   {
@@ -540,7 +557,7 @@
     "def _calculate_languages_ratios(text):\n",
     "    languages_ratios = {}\n",
     "    tok = wordpunct_tokenize(text)\n",
-    "    wor = [word.lower() for word in tok]\n",
+    "    words = [word.lower() for word in tok]\n",
     "    # 텍스트에서 고유 불용어의 발생을 계산한다\n",
     "    for language in stopwords.fileids():\n",
     "        stopwords_set = set(stopwords.words(language))\n",
@@ -579,57 +596,121 @@
     "this world. Human being is supposed to be the most intelligent and\n",
     "loved creation by that power and that is being searched by human\n",
     "beings in different ways into different things. As a result people\n",
-    "reveal His assumed form as per their own perceptions and beliefs.\n",
-    "It has given birth to different religions and people are divided\n",
-    "on the name of religion viz. Hindu, Muslim, Sikhs, Christian etc.\n",
-    "People do not stop at this. They debate the superiority of one\n",
-    "over the other and fight to establish their views. Shrewd people\n",
-    "like politicians oppose and support them at their own convenience\n",
-    "to divide them and control them. It has intensified to the extent\n",
-    "that even parents of a\n",
-    "new born baby teach it about religious differences and recommend\n",
-    "their own religion superior to that of others and let the child\n",
-    "learn to hate other people just because of religion. Jonathan\n",
-    "Swift, an eighteenth century novelist, observes that we have just\n",
-    "enough religion to make us hate, but not enough to make us love\n",
-    "one another.\n",
-    "The word 'religion' does not have a derogatory meaning - A literal\n",
-    "meaning of religion is 'A\n",
-    "personal or institutionalized system grounded in belief in a God\n",
-    "or Gods and the activities connected with this'. At its basic level,\n",
-    "'religion is just a set of teachings that tells people how to lead \n",
-    "a good life'. It has never been the purpose of religion to divide people\n",
-    "into groups of isolated followers that\n",
-    "cannot live in harmony together. No religion claims to teach\n",
-    "intolerance or even instructs its believers to segregate a\n",
-    "certain religious group or even take the fundamental rights of\n",
-    "an individual solely based on their religious choices. It is also\n",
-    "said that 'Majhab nhi sikhata aaps mai bair krna'.But this very\n",
-    "majhab or religion takes a very heinous form when it is misused\n",
-    "by the shrewd politicians and the fanatics e.g. in Ayodhya on 6th\n",
-    "December, 1992 some right wing political parties\n",
-    "and communal organizations incited the Hindus to demolish the 16th\n",
-    "century Babri Masjid in the\n",
-    "name of religion to polarize Hindus votes. Muslim fanatics in\n",
-    "Bangladesh retaliated and destroyed a\n",
-    "number of temples, assassinated innocent Hindus and raped Hindu\n",
-    "girls who had nothing to do with\n",
-    "the demolition of Babri Masjid. This very inhuman act has been\n",
-    "presented by Taslima Nasrin, a Bangladeshi Doctor-cum-Writer\n",
-    "in her controversial novel 'Lajja' (1993) in which, she seems\n",
-    "to utilizes fiction's mass emotional appeal, rather than its\n",
-    "potential for nuance and universality.\n",
-    "'''"
+    "reveal His assumed form as per their own perceptions and beliefs.'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "english\n"
+     ]
+    }
+   ],
+   "source": [
+    "language = detect_language(text)\n",
+    "print(language)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# language = detect_language(text)\n",
-    "# print(language)"
+    "text = '''Artikel 26\n",
+    "1. Jeder hat das Recht auf Bildung. Die Bildung ist unentgeltlich, zum mindesten \n",
+    "der Grundschulunterricht und die grundlegende Bildung. Der Grundschulunterricht \n",
+    "ist obligatorisch. Fach- und Berufsschulunterricht müssen allgemein verfügbar \n",
+    "gemacht werden, und der Hochschulunterricht muß allen gleichermaßen entsprechend \n",
+    "ihren Fähigkeiten offenstehen.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "german\n"
+     ]
+    }
+   ],
+   "source": [
+    "language = detect_language(text)\n",
+    "print(language)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "text = '''Suzanne et Joseph étaient nés dans les deux premières années de leur \n",
+    "arrivée à la colonie. Après la naissance de Suzanne, la mère abandonna l’enseignement \n",
+    "d’état. Elle ne donna plus que des leçons particulières de français. Son mari avait \n",
+    "été nommé directeur d’une école indigène et, disaient-elle, ils avaient vécu très \n",
+    "largement malgré la charge de leurs enfants.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "french\n"
+     ]
+    }
+   ],
+   "source": [
+    "language = detect_language(text)\n",
+    "print(language)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "text = '''Лорем ипсум долор сит амет, ан темпорибус сцрибентур сед, дуо ут омиттам \n",
+    "форенсибус омиттантур. Но вим яуис дицо елаборарет. Ех сеа дицтас тациматес салутанди, \n",
+    "яуис цоммуне фастидии ет иус, ид вих яуаестио сенсибус патриояуе. Ад инани цонсеяуат вих.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "russian\n"
+     ]
+    }
+   ],
+   "source": [
+    "language = detect_language(text)\n",
+    "print(language)"
    ]
   }
  ],
