--- a/03.Morphology.ipynb
+++ b/03.Morphology.ipynb
@@ -5,7 +5,24 @@
    "metadata": {},
    "source": [
     "# Chapter 3 - Morphology 시작하기\n",
-    "행태학 Getting Our Feet Wet"
+    "행태학 - 단어의 내부구조를 '원형'과 '접사'로 구분"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 명사 - 단수형(어간추출)/ 복수형/ 품사변경 접미사 (총 8가지)\n",
+    "# 동사 - 기본(어간추출)/ 동명사/ 3인칭/ 과거,과거분사 (8가지)\n",
+    "# 형용사,부사 - 비교/ 최상급 등\n",
+    "\n",
+    "# 어간추출 \n",
+    "# (1) 공격적 어간추출시 품질은 낮다 (차별성 떨어짐)\n",
+    "# (2) 가벼운 어간추출은 어느정도 품질이 보증 (차별점은 높아짐)"
    ]
   },
   {
@@ -27,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -72,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -292,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +341,7 @@
        "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +349,6 @@
    "source": [
     "# pip install pyenchant\n",
     "# 알파벳 단어 확인모듈\n",
-    "\n",
     "import enchant\n",
     "s = enchant.Dict(\"en_US\")\n",
     "s.check('ness')   # 해당 단어의 적합성 확인"
@@ -340,34 +356,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "texts = \"itismyfavouritebook\"\n",
-    "\n",
-    "def tokenize(st1):\n",
-    "    result, i = [], 0\n",
-    "    for j in range(len(st1),-1,-1):\n",
-    "        if s.check(st1[0:j]):\n",
-    "            st = st1[0:1]\n",
-    "            print(st)\n",
-    "            #result.append(st1[i:j])\n",
-    "            #i = j\n",
-    "    return result"
+    "s.check('is')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "itismyfavouriteboo\n",
+      "itismyfavouritebo\n",
+      "itismyfavouriteb\n",
+      "itismyfavourite\n",
+      "itismyfavourit\n",
+      "itismyfavouri\n",
+      "itismyfavour\n",
+      "itismyfavou\n",
+      "itismyfavo\n",
+      "itismyfav\n",
+      "itismyfa\n",
+      "itismyf\n",
+      "itismy\n",
+      "itism\n",
+      "itis\n",
+      "iti\n",
+      "it\n",
+      "i\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#tokenize(\"itismyfavouritebook\")"
+    "texts = \"itismyfavouritebook\"\n",
+    "\n",
+    "def tokenize(st1):\n",
+    "    result = []\n",
+    "    lengths = len(st1)\n",
+    "    for j in range(lengths-1,-1,-1):\n",
+    "        check_word = st1[0:j]\n",
+    "        print(check_word)\n",
+    "#         if check_word != None:\n",
+    "#             if s.check(check_word):\n",
+    "#                 result.append(check_word)\n",
+    "#                 lengths = j\n",
+    "#     result = list(set(result))\n",
+    "#     return result\n",
+    "\n",
+    "tokenize(texts)"
    ]
   },
   {
@@ -389,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -449,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -478,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -524,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -569,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -584,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -601,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -619,8 +675,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text = '''Artikel 26\n",
@@ -633,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -666,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -697,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
