--- a/04.identify_word.ipynb
+++ b/04.identify_word.ipynb
@@ -251,10 +251,12 @@
     }
    ],
    "source": [
-    "import nltk\n",
+    "# import nltk\n",
     "sentence = '''The/DT sacred/VBN Ganga/NNP flows/VBZ in/IN this/DT region/NN \n",
     "              ./. This/DT is/VBZ a/DT pilgrimage/NN ./. People/NNP from/IN all/DT \n",
     "              over/IN the/DT country/NN visit/NN this/DT place/NN ./. '''\n",
+    "\n",
+    "# nltk.tag.str2tuple() : tag 내용을 찾으면 분리해서 tuple을 생성\n",
     "[nltk.tag.str2tuple(t) for t in sentence.split()]"
    ]
   },
@@ -276,7 +278,7 @@
    ],
    "source": [
     "# tuple2str() : tag tuple\n",
-    "import nltk\n",
+    "# import nltk\n",
     "taggedtok = ('bear', 'NN')\n",
     "from nltk.tag.util import tuple2str\n",
     "tuple2str(taggedtok)"
@@ -307,7 +309,7 @@
    ],
    "source": [
     "# treebank 말뭉치를 기준으로 연산\n",
-    "import nltk\n",
+    "# import nltk\n",
     "from nltk.corpus import treebank\n",
     "treebank_tagged = treebank.tagged_words(tagset='universal')\n",
     "print('treebank_tagged :', len(treebank_tagged))\n",
