--- a/04.identify_word.ipynb
+++ b/04.identify_word.ipynb
@@ -655,30 +655,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<UnigramTagger: size=12408>\n"
+      "unitagger: <UnigramTagger: size=12408>\n",
+      "[('Pierre', 'NNP'), ('Vinken', 'NNP'), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'DT'), ('board', 'NN'), ('as', 'IN'), ('a', 'DT'), ('nonexecutive', 'JJ'), ('director', 'NN'), ('Nov.', 'NNP'), ('29', 'CD'), ('.', '.')]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('Pierre', 'NNP'),\n",
-       " ('Vinken', 'NNP'),\n",
-       " (',', ','),\n",
-       " ('61', 'CD'),\n",
-       " ('years', 'NNS'),\n",
-       " ('old', 'JJ'),\n",
-       " (',', ','),\n",
-       " ('will', 'MD'),\n",
-       " ('join', 'VB'),\n",
-       " ('the', 'DT'),\n",
-       " ('board', 'NN'),\n",
-       " ('as', 'IN'),\n",
-       " ('a', 'DT'),\n",
-       " ('nonexecutive', 'JJ'),\n",
-       " ('director', 'NN'),\n",
-       " ('Nov.', 'NNP'),\n",
-       " ('29', 'CD'),\n",
-       " ('.', '.')]"
+       "0.9619024159944167"
       ]
      },
      "execution_count": 22,
@@ -687,9 +671,11 @@
     }
    ],
    "source": [
+    "# Unitagger 로 train 을 생성한다\n",
     "unitagger = UnigramTagger(training) # train 훈련 시행\n",
-    "print(unitagger)\n",
-    "unitagger.tag(treebank.sents()[0]) # tag를 붙여서 출력"
+    "print('unitagger:', unitagger)\n",
+    "print(unitagger.tag(treebank.sents()[0])) # tag를 붙여서 출력\n",
+    "unitagger.evaluate(testing)         # test를 활용평가 (정확도 측정)"
    ]
   },
   {
@@ -698,63 +684,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Pierre', 'NNP'),\n",
-       " ('Vinken', 'NNP'),\n",
-       " (',', ','),\n",
-       " ('61', 'CD'),\n",
-       " ('years', 'NNS'),\n",
-       " ('old', 'JJ'),\n",
-       " (',', ','),\n",
-       " ('will', 'MD'),\n",
-       " ('join', 'VB'),\n",
-       " ('the', 'DT'),\n",
-       " ('board', 'NN'),\n",
-       " ('as', 'IN'),\n",
-       " ('a', 'DT'),\n",
-       " ('nonexecutive', 'JJ'),\n",
-       " ('director', 'NN'),\n",
-       " ('Nov.', 'NNP'),\n",
-       " ('29', 'CD'),\n",
-       " ('.', '.')]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# treebank.sents()[0]              # tag제거한 word만 출력\n",
-    "unitagger.tag(treebank.sents()[0]) # tag를 붙여서 출력"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9619024159944167"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unitagger.evaluate(testing)         # test를 활용평가 (정확도 측정)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<UnigramTagger: size=2>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -778,21 +713,22 @@
        " ('.', None)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train 목록이 유일하게 {'Vinken': 'NN'} 1개 존재시\n",
-    "# 사용자정의 신조어 단어들의 전처리용 훈련의 용도로 활용\n",
+    "# tagger 목록은 {'Vinken': 'NN'} 특정한 갯수가 존재\n",
+    "# 사용자정의 전처리 훈련의 용도로\n",
     "unitag = UnigramTagger(model={'Vinken': 'NN', '61':'KK'})\n",
+    "print(unitag)\n",
     "unitag.tag(treebank.sents()[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -808,13 +744,13 @@
        "0.6851817640659318"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cut-off : 발생 빈도를 사용하여 태그를 결정\n",
+    "# cut-off : 특정 발생빈도 이상의 데이터만 유효하게 처리한다\n",
     "# 최소 임계빈도값을 cut-off에 전달 (5번 이상 발생해야 유효 tag로 인식)\n",
     "unitagger = UnigramTagger(training, cutoff=15)\n",
     "print(unitagger)\n",
@@ -823,15 +759,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DefaultTagger: tag=NN>\n",
-      "<UnigramTagger: size=10218>\n"
+      "NN tagger: <DefaultTagger: tag=NN>\n",
+      "back-off : <UnigramTagger: size=10218>\n"
      ]
     },
     {
@@ -840,30 +776,29 @@
        "0.9619024159944167"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train 모델을 만들고, None 타입은 Backoff 방식으로 보완\n",
     "# back-off tagging을 테스트\n",
+    "# Train 모델을 만들고, None 타입은 Backoff 방식으로 보완\n",
     "# 다른 프로세서와의 통신시 정상적인 흐름이 되지 않을 때 일정 시간동안 특정 간격으로 같은 데이터를 재 요청\n",
     "from nltk.tag import UnigramTagger, DefaultTagger\n",
-    "\n",
     "# from nltk.corpus import treebank\n",
     "# training = treebank.tagged_sents()[:7000]\n",
     "# testing  = treebank.tagged_sents()[2000:]\n",
     "tag1 = DefaultTagger('NN')\n",
-    "print(tag1)\n",
+    "print('NN tagger:', tag1)\n",
     "tag2 = UnigramTagger(training, backoff = tag1)  # Train 모델을 만들고, None 타입은 Backoff 방식으로 보완하라\n",
-    "print(tag2)  # back-off 모델 보완결과 오히려 Size는 축소\n",
+    "print('back-off :', tag2)  # back-off 모델 보완결과 오히려 Size는 축소\n",
     "tag2.evaluate(testing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -878,13 +813,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 01-2 Back-off 성능의 비교\n",
+    "### 02 Back-off 성능의 비교\n",
     "BigramTagger, TrigramTagger ,UnigramTagger 별 정확도 측정 및 비교"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -912,13 +847,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 02 BigramTagger 의 훈련 및 검증\n",
+    "### 03 BigramTagger 의 훈련 및 검증\n",
     "BigramTagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +879,7 @@
        " ('.', '.')]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +904,7 @@
        "0.9171131227292321"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,13 +918,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 03 BigramTagger , TrigramTagger.. etc 를 활용한 학습\n",
+    "### 04 BigramTagger , TrigramTagger.. etc 를 활용한 학습\n",
     "BigramTagger, TrigramTagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +960,7 @@
        "0.9304554878173943"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,13 +980,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 04 affixtag로 학습 및 검증\n",
+    "### 05 affixtag로 학습 및 검증\n",
     "affixtag : affix(붙이다) 접두사, 접미사를 사용한 Context Tagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1002,7 @@
        "0.2902682841718497"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1010,6 @@
    "source": [
     "# affixtag : 접두사, 점미사를 활용한 학습 및 검증\n",
     "from nltk.tag import AffixTagger\n",
-    "\n",
     "# from nltk.corpus import treebank\n",
     "# training= treebank.tagged_sents()[:7000]\n",
     "# testing = treebank.tagged_sents()[2000:]\n",
@@ -1086,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1036,7 @@
        "0.2094751318841472"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1044,6 @@
    "source": [
     "# affixtag : (+4) 4개의 접두사 묶어서 학습 및 검증\n",
     "from nltk.tag import AffixTagger\n",
-    "\n",
     "# from nltk.corpus import treebank\n",
     "# training= treebank.tagged_sents()[:7000]\n",
     "# testing = treebank.tagged_sents()[2000:]\n",
@@ -1121,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1070,7 @@
        "0.25699447831352507"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1101,7 @@
        "0.25841082168442225"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1110,6 @@
     "# affitag 를 back-off chain 로 학습 및 검증\n",
     "# training= treebank.tagged_sents()[:7000]\n",
     "# testing = treebank.tagged_sents()[2000:]\n",
-    "\n",
     "prefixtagger = AffixTagger(training, affix_length = 4)\n",
     "print(prefixtagger)\n",
     "prefixtagger3 = AffixTagger(training,affix_length = 3, backoff = prefixtagger)\n",
@@ -1187,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1135,7 @@
        "0.2940451998275756"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1164,7 @@
        "0.33072644046226163"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,13 +1179,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 05 Trigram n Tags - 2차 마르코프모델을 기반한 학습\n",
+    "### 06 Trigram n Tags - 2차 마르코프모델을 기반한 학습\n",
     "Trigram n Tags "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1194,7 @@
      "text": [
       "0.9882176652913768\n",
       "Training  : 0min  2sec\n",
-      "evaluation: 3min  12sec\n"
+      "evaluation: 3min  9sec\n"
      ]
     }
    ],
@@ -1298,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1240,7 @@
        "Tree('S', [Tree('Noun Pharse', [('A', 'DT'), ('wise', 'JJ'), ('small', 'JJ'), ('girl', 'NN'), ('of', 'IN'), ('village', 'NN')]), ('became', 'VBD'), Tree('Noun Pharse', [('leader', 'NN')])])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1345,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1287,7 @@
        "Tree('S', [Tree('Noun Pharse', [('financial', 'NN'), ('year', 'NN'), ('account', 'NN'), ('summary', 'NN')])])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1392,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1334,7 @@
        "Tree('S', [('A', 'DT'), Tree('Verb', [('wise', 'JJ'), ('small', 'JJ')]), ('girl', 'NN'), ('of', 'IN'), ('village', 'NN'), Tree('Verb', [('became', 'VBD')]), ('leader', 'NN')])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
